:bug:Fixed carousel backgrounds now are visible + Deleted ugly clouds

--- a/assets/scss/index_style.scss
+++ b/assets/scss/index_style.scss
@@ -5,7 +5,7 @@
   height: 70vh;
 
   &__slice {
-    height: 100%;
+    height: 70vh;
 
     &--first {
       background-image: url(../img/futbolitoppa2018.png);
@@ -30,7 +30,6 @@
 // BLOG
 .blog {
   padding: 70px 15vw;
-  background-image: url(../img/trama_l.gif);
 
   &__header {
     margin-bottom: 50px;
